# monty

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  plan-todo.md  plan.md  pyproject.toml
.claude/: settings.json
benches/: main.rs
crates/monty/: Cargo.toml
crates/monty/src/: args.rs  builtins.rs  evaluate.rs  exception_private.rs  exception_public.rs  exceptions.rs  expressions.rs  for_iterator.rs  heap.rs  intern.rs  lib.rs  namespace.rs  object.rs  parse.rs  prepare.rs  repl.rs  resource.rs  run.rs  run_frame.rs  signature.rs  sorting.rs  value.rs
crates/monty/src/builtins/: getattr.rs  hash.rs  min_max.rs  mod.rs  pow.rs  print.rs  reversed.rs  sorted.rs
crates/monty/src/bytecode/: compiler.rs  op.rs
crates/monty/src/bytecode/vm/: async_exec.rs  attr.rs  call.rs  collections.rs  compare.rs  exceptions.rs  format.rs  mod.rs  scheduler.rs
crates/monty/src/types/: bytes.rs  dataclass.rs  dict.rs  iter.rs  list.rs  long_int.rs  mod.rs  module.rs  namedtuple.rs  path.rs  py_trait.rs  range.rs  set.rs  slice.rs  str.rs  tuple.rs  type.rs
crates/monty/test_cases/: async__gather_all.py  async__nested_gather_ext.py  async__recursion_depth_isolation.py  attr__get_int_error.py  attr__get_list_error.py  attr__set_int_error.py  attr__set_list_error.py  builtin__getattr.py  builtin__print_invalid_kwarg.py  dataclass__basic.py  dataclass__frozen_set_error.py  dataclass__get_missing_attr_error.py  function__err_unexpected_kwarg_quote.py  function__kwargs_unpacking.py  hash__ops.py  int__bigint.py  method__args_kwargs_unpacking.py  recursion__deep_drop.py  recursion__deep_eq.py  recursion__deep_hash.py  type__float_repr_both_quotes.py  type__float_repr_newline.py  type__float_repr_single_quote.py
crates/monty/tests/: asyncio.rs  datatest_runner.rs  inputs.rs  repl.rs  resource_limits.rs
src/: args.rs  (+19 more)
(+55 files in other folders)
