[package]
name = "monty"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "monty"
path = "src/lib.rs"

[dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_parser", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_ast", branch = "main" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_text_size", branch = "main" }
ahash = { version = "0.8.0", features = ["serde"] }
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }
strum = { version = "0.27", features = ["derive"] }
hashbrown = "0.16.1"

[features]
# ref-count-return changes behavior to return information on reference counts to check they're correct
# should be used for testing only
ref-count-return = []
# ref-count-panic enables a Drop implementation on Value which catches heap allocated values that are dropped
# without being dereferenced.
# should be used for testing only
ref-count-panic = []

[dev-dependencies]
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
criterion = "0.5"
datatest-stable = "0.2"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
serde_json = "1.0"

[[bench]]
name = "main"
harness = false

[[test]]
name = "datatest_runner"
harness = false

[lints]
workspace = true
